<resources>
    <string name="app_name">Medi Station</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="name">이름</string>
    <string name="birth">생년월일</string>
    <string name="birth_text_format">%04d-%02d-%02d</string>
    <string name="submit_error">모든 칸에 입력해주세요.</string>
    <string name="enter_gender">성별은 무엇인가요?</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="isPregnant">임산부 또는 수유부인가요?</string>
    <string name="no">아니요</string>
    <string name="pregnant">임산부에요</string>
    <string name="lactating">수유부에요</string>

    <string name="enter_disease">어떤 질환을 가지고 있나요?</string>
    <string name="no_disease">질환이 없어요</string>
    <string name="high_blood_pressure">고혈압</string>
    <string name="diabetes">당뇨</string>
    <string name="hyperlipidemia">고지혈증</string>
    <string name="kidney_disease">신장질환</string>
    <string name="liver_disease">간질환</string>
    <string name="cancer">암</string>
    <string name="urinary">비뇨기/산부인과</string>
    <string name="mental_illness">정신질환</string>
    <string name="etc">기타</string>

    <string name="eating_medicines">어떤 약을 복용 중이신가요?</string>
    <string name="no_medicine">복용중인 약이 없어요</string>
    <string name="painkiller_medicine">진통제</string>
    <string name="cold_medicine">감기약</string>
    <string name="antibiotic_medicine">항생제</string>
    <string name="stomach_medicine">위장약</string>
    <string name="blood_medicine">혈압약</string>
    <string name="diabetes_medicine">당뇨약</string>
    <string name="osteoporosis_medicine">골다공증약</string>
    <string name="sleep_medicine">수면제</string>
    <string name="anemia_medicine">빈혈약</string>

    <string name="registered">회원가입 되었습니다!</string>
    <string name="request_failed">실패했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="take_picture_to_search">기기에 약을 인식시켜\n성분을 검색해보세요.</string>
    <string name="search">검색하기</string>
    <string name="next">다음</string>
    <string name="progress_description_1">메디스테이션 기기에서\n약을 인식시키세요.</string>
    <string name="progress_description_2">휴대폰을 메디스테이션의\n윗면에 가져다 대세요.</string>
    <string name="progress_description_2_detail">휴대폰이 인식되면 자동으로 결과가 뜹니다.</string>

    <string name="dont_take">복용하면 안돼요!</string>
    <string name="safe">복용해도 안전합니다!</string>
    <string name="show_medicine_info">+ 약 정보 더보기</string>
    <string name="protect_method">보관 방법</string>
    <string name="symptom">증상</string>
    <string name="take_info">복용 정보</string>
    <string name="caution">주의사항</string>
</resources>
