<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorSecondary"
    tools:ignore="ContentDescription">

    <include
        android:id="@+id/logo"
        layout="@layout/logo_title_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/safeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/xImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toTopOf="@id/dontTakeText" />

        <TextView
            android:id="@+id/dontTakeText"
            style="@style/PrimaryTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#00000000"
            android:text="@string/safe"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/showMedicineInfoButton"
            style="@style/PrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_ripple_outline"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/show_medicine_info"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/goBackButton"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/medicineName"
                    style="@style/PrimaryTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondary"
                    tools:text="판피린티정" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="동아제약" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/protect_method"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/protectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="기밀용기, 실온보관" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/symptom"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/symptomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="콧물, 코막힘, 재채기, 인후통, 기침, 가래, 오한, 발열, 관절통, 두통, 근육통" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/take_info"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/takeInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="성인\n하루 3번, 한번에 1알씩" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/caution"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cautionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="1. 충분한 물과 함께 투여하세요\n\n2. 졸음이 올 수 있으므로 운전, 위험한 기계조작시 주의하세요\n\n3. 전문가와 상의없이 다른 감기약과 병용하지 마세요\n\n4. 이 약의 투여기간 동안에는 가능한 금주하세요\n\n5. 간질환 환자나 신장질환 환자의 경우 전문가에게 미리 알리세요\n\n6. 감염증상을 은폐시켜 감염성 합병증 진단을 지연시킬 수 있어요" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/homeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="80dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/goBackButton" />
</androidx.constraintlayout.widget.ConstraintLayout>