<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.ljhnas.medistation.view.search_progress.SearchProgressViewModel" />

        <variable
            name="activity"
            type="com.ljhnas.medistation.view.search_progress.SearchProgressActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayBackground"
        android:orientation="vertical"
        tools:ignore="ContentDescription">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->activity.finish()}"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back_ios_24px"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logo" />

        <include
            android:id="@+id/logo"
            layout="@layout/logo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/progressFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="160dp"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{vm.progress == 0 ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:id="@+id/mainImage"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/machine_image"
                    app:layout_constraintBottom_toTopOf="@id/mainText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/mainText"
                    style="@style/PrimaryTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:bufferType="spannable"
                    android:gravity="center"
                    android:text="@string/progress_description_1"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mainImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{vm.progress == 1 ? View.VISIBLE : View.GONE}"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/mainImage2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/machine_nfc_image"
                    app:layout_constraintBottom_toTopOf="@id/mainText2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/mainText2"
                    style="@style/PrimaryTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:bufferType="spannable"
                    android:gravity="center"
                    android:text="@string/progress_description_2"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@id/detailText2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mainImage2" />

                <TextView
                    android:id="@+id/detailText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/progress_description_2_detail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mainText2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <Button
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="@{()->vm.onClickNextButton()}"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="@{vm.progress == 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressFrameLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>